# server/src/module/music/music.module.ts
@@ -1,0 +1,14 @@
+import { Module } from '@nestjs/common';
+import { TypeOrmModule } from '@nestjs/typeorm';
+import { MusicAlbumEntity } from './entities/music-album.entity';
+import { MusicSongEntity } from './entities/music-song.entity';
+import { AlbumService } from './album.service';
+import { AlbumController } from './album.controller';
+
+@Module({
+  imports: [TypeOrmModule.forFeature([MusicAlbumEntity, MusicSongEntity])],
+  controllers: [AlbumController],
+  providers: [AlbumService],
+  exports: [AlbumService],
+})
+export class MusicModule {}
